--- a/Lister/Resources/en.lproj/Main.strings
+++ b/Lister/Resources/en.lproj/Main.strings
@@ -1,1 +1,10 @@
-﻿
+﻿/* NewDocumentController */
+"8xf-B6-SKw.text" = "New List";
+"6c6-zt-C8U.placeholder" = "Title";
+"J8C-Uk-vmn.text" = "Color";
+
+/* DocumentsViewController */
+"NVI-Uw-5fJ.title" = "JustList";
+
+/* ListViewController */
+"BlV-6l-ZLT.text" = "Color";
