--- a/Lister/Resources/ru.lproj/Main.strings
+++ b/Lister/Resources/ru.lproj/Main.strings
@@ -1,1 +1,10 @@
-﻿
+﻿/* NewDocumentController */
+"8xf-B6-SKw.text" = "Новый список";
+"6c6-zt-C8U.placeholder" = "Название";
+"J8C-Uk-vmn.text" = "Цвет";
+
+/* DocumentsViewController */
+"NVI-Uw-5fJ.title" = "Списки";
+
+/* ListViewController */
+"BlV-6l-ZLT.text" = "Color";
